login,productos,proveedores

--- a/application/views/main/index.html
+++ b/application/views/main/index.html
@@ -39,7 +39,7 @@ $var privilege: $params['privilege']
         h1 {
             animation-duration: 5s;
             animation-name: slidein;
-            font face: "Didact Gothic";
+            font-face: "Didact Gothic";
         }
 
         @keyframes slidein {
@@ -98,7 +98,7 @@ $var privilege: $params['privilege']
     </style>
 </head>
 
-<body class="banner">
+<body class="banner" style="background-color: azure;">
         <br>
         <br>
         <h1 style="color:#456583">Sistemas de ventas 2021</h1>  
