--- a/application/views/admin/insert.html
+++ b/application/views/admin/insert.html
@@ -78,87 +78,103 @@
 </head>
 
 <body>
-<h3>
-    <a href="/admin">Insertar nuevo Administrador</a>
-</h3>
-<form action="" method="post" enctype="multipart/form-data">
-
-    <div class="form-group">
-        <label for="nombre_admin">Nombre</label>
-        <input required id="nombre_admin" type="text" class="form-control" name="nombre_admin" size="100"/>
-    </div>
-
-    <div class="form-group">
-        <label for="apellidos_admin">Apellidos</label>
-        <input required id="apellidos_admin" type="text" class="form-control" name="apellidos_admin" size="100"/>
-    </div>
-
-    <div class="form-group">
-        <label for="num_cuenta">Numero de cuenta</label>
-        <input required id="num_cuenta" type="number" class="form-control" name="num_cuenta" size="30"/>
-    </div>
-
-    <div class="form-group">
-        <label for="nombre_banco">Banco</label>
-        <input required id="nombre_banco" type="text" class="form-control" name="nombre_banco" size="30"/>
-    </div>
-
-    <div class="form-group">
-        <label for="tipo_tarjeta_admin">Tipo de tarjeta</label>
-        <div class="radio">
-            <label><input type="radio" name="tipo_tarjeta_admin" value=0 checked>Debito</label>
+    <h3>
+        <a href="/Insert">Insertar nuevo Administrador</a>
+    </h3>
+    <form action="" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <label>Nombre completo</label>
+            <input required id="apellidos_admin" type="text" class="form-control" name="apellidos_admin" size="100"/>
         </div>
-        <div class="radio">
-            <label><input type="radio" name="tipo_tarjeta_admin" value=1>Credito</label>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="num_tarjeta">Numero de tarjeta</label>
-        <input required id="num_tarjeta" type="text" class="form-control" name="num_tarjeta" size="30"/>
-    </div>
     
-    <div class="form-group">
-        <label for="telefono_admin">Telefono</label>
-        <input required id="telefono_admin" type="text" class="form-control" name="telefono_admin" size="30"/>
-    </div> 
-
-    <div class="form-group">
-        <label for="correo_admin">Correo</label>
-        <input required id="correo_admin" type="email" class="form-control" name="correo_admin" size="30"/>
-    </div>
-
-    <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input required id="password" type="password" class="form-control" name="password" size="30"/>
-    </div>
-
-    <div class="form-group">
-        <label for="status_admin">Estado</label>
-        <div class="radio">
-            <label><input type="radio" name="status_admin" value=0 checked>Inactivo</label>
+        <div class="form-group">
+            <label>Nombre de usuario</label>
+            <input required id="nombre_admin" type="text" class="form-control" name="nombre_admin" size="100"/>
         </div>
-        <div class="radio">
-            <label><input type="radio" name="status_admin" value=1>Activo</label>
+    
+        <div class="form-group">
+            <label>Numero de cuenta</label>
+            <input required id="num_cuenta type="number" class="form-control" name="num_cuenta" size="30"/>
         </div>
-    </div>
-
-    <div class="form-group">
-        <label for="change_pwd">¿Cambiar contraseña?</label>
-        <div class="radio">
-            <label><input type="radio" name="change_pwd" value=0 checked>No</label>
+    
+        <div class="form-group">
+            <label>Banco</label>
+            <input required id="nombre_banco" type="text" class="form-control" name="nombre_banco" size="30"/>
         </div>
-        <div class="radio">
-            <label><input type="radio" name="change_pwd" value=1>Si</label>
+    
+        <div class="form-group">
+            <label>Tipo de tarjeta</label>
+            <div class="radio">
+                <label><input type="radio" name="tipo_tarjeta_admin" value=0 checked>Debito</label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" name="tipo_tarjeta_admin" value=1>Credito</label>
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        <label></label>
-        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-save"></span> Guardar</button>
-    </div>
-</form>
-<br>
-<br>
-<br>
+    
+        <div class="form-group">
+            <label>Numero de tarjeta</label>
+            <input required id="num_tarjeta" type="text" class="form-control" name="num_tarjeta" size="30"/>
+        </div>
+        
+        <div class="form-group">
+            <label>Telefono</label>
+            <input required id="telefono_admin" type="text" class="form-control" name="telefono_admin" size="30"/>
+        </div> 
+    
+        <div class="form-group">
+            <label>Correo</label>
+            <input required id="correo_admin" type="email" class="form-control" name="correo_admin" size="30"/>
+        </div>
+    
+        <div class="form-group">
+            <label>Contraseña</label>
+            <input required id="password" type="password" class="form-control" name="password" size="30"/>
+        </div>
+    
+        <div class="form-group">
+            <label>Privilege</label>
+            <select readonly name="privilege" id="privilege" class="form-control" >
+              <option value=0>Admin</option>
+            </select>
+        </div>
+    
+        <div class="form-group">
+            <label>Userhash</label>
+            <input readonly id="user_hash" type="text" class="form-control" name="user_hash" size="32" />
+        </div>
+    
+        <div class="form-group">
+            <label>Estado</label>
+            <div class="radio">
+                <label><input type="radio" name="status_admin" value=0 checked>Inactivo</label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" name="status_admin" value=1>Activo</label>
+            </div>
+        </div>
+    
+        <div class="form-group">
+            <label>Forzar cambio de Contraseña</label>
+            <div class="radio">
+                <label><input type="radio" name="change_pwd" value=0 checked>No</label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" name="change_pwd" value=1>Si</label>
+            </div>
+        </div>
+    
+        <div class="form-group">
+            <label>Fecha de registro</label>
+            <input readonly id="created" type="text" class="form-control" name="created" size="32" />
+        </div>
+    
+        <div class="form-group">
+            <label></label>
+            <button id="send" name="send" style="width: 200px;" class="form-control"><span class="glyphicon glyphicon-save"></span> Guardar</button>
+        </div>
+    </form>
+    <br>
+    <br>
+    <br>
 </body>
