--- a/application/views/admin/master.html
+++ b/application/views/admin/master.html
@@ -24,8 +24,8 @@ $def with (page)
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class='active'><a href="/admin"><span class="glyphicon glyphicon-list"></span> admin</a></li>
-                    <li><a href="/admin/insert"><span class="glyphicon glyphicon-plus"></span>Insertar</a></li>
+                    <li class='active'><a href="/admin"><span class="glyphicon glyphicon-list"></span> Administradores</a></li>
+                    <li><a href="/admin/insert"><span class="glyphicon glyphicon-plus"></span>Insertar nuevo Administrador</a></li>
                 </ul>
             </div>
         </div>
