--- a/application/views/main/login.html
+++ b/application/views/main/login.html
@@ -9,8 +9,8 @@ $var privilege: -1
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-            font face: "Didact Gothic";
-            font size: 45;
+            font: "Didact Gothic";
+
         }
         @media only screen and (max-width: 740px) {
         body {
@@ -23,25 +23,13 @@ $var privilege: -1
             position: absolute;
             width: 580px;
             height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
+            left: 30%;
+            top: 20%;
             background: #F9F9F9;
             border: 2px solid #F9F9F9;
             box-sizing: border-box;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
         }
 
         #ingresar{
@@ -49,31 +37,10 @@ $var privilege: -1
             width: 200px;
             height: 50px;
             text-align: center;
-
             background: #43A6EE;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 10px;
             color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
-            left: center;
-            top: center;
-
-            font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
             justify-content: center;
         }
     </style>
@@ -85,26 +52,26 @@ $if message != None:
 	<strong>Error:</strong> $message
     </div>
 
-<div >
+<div>
 <form action="" method="post" enctype="multipart/form-data" id="sesion">
     <div style="margin-left: 30px; margin-right: 30px;">
-    <h2 id="h2" style="color:#46CAEA" >Inicio de sesion</h2>
+    <h2 style="color:#46CAEA; margin-left: 130px;" >Inicio de sesion</h2>
+    <p>&nbsp;</p>
             <label style="color:#456583">Nombre de usuario:</label>
             <input required id="nombre_admin" type="text" class="form-control" name="nombre_admin" 
-            style="border-color:#456583"/>
+            style="border-color:#b2b6b9"/>
     </div>
-
+<p></p>
     <div style="margin-left: 30px; margin-right: 30px;">
             <label style="color:#456583">Contraseña:</label>
             <input required id="password" type="password" class="form-control" name="password" size="30"
-            style="border-color:#456583"/>
+            style="border-color:#b2b6b9"/>
     </div>
-
-    <div id="boton_ingresar" position="center">
-            <label></label>
-            <button id="Login" name="Login" class="form-control" 
-            style="background-color:#43A6EE; margin-left: 30px; ">Iniciar sesion</button>
+    <div>
+        <p>&nbsp;</p>
+        <button id="Login" name="Login" class="btn btn-success" style=" margin-left: 210px; height: 30px; ">Iniciar sesion</button>
     </div>
+            
 </form>
 </div>
 </body>
