--- a/application/views/proveedor/edit.html
+++ b/application/views/proveedor/edit.html
@@ -92,22 +92,24 @@ $if message != None:
     <input type="hidden" name="idproveedor" id="idproveedor" value="$proveedor.idproveedor" />
 
     <div class="form-group">
-    <label for="nombre_pro">nombre_pro</label>
+    <label for="nombre_pro">Nombre del Proveedor</label>
     <input required id="nombre_pro" type="text" class="form-control" name="nombre_pro" size="30" value="$proveedor.nombre_pro"/>
 </div><div class="form-group">
-    <label for="telefono_pro">telefono_pro</label>
+    <label for="telefono_pro">Telefono </label>
     <input required id="telefono_pro" type="text" class="form-control" name="telefono_pro" size="30" value="$proveedor.telefono_pro"/>
 </div><div class="form-group">
-    <label for="correo_pro">correo_pro</label>
+    <label for="correo_pro">Correo</label>
     <input required id="correo_pro" type="text" class="form-control" name="correo_pro" size="30" value="$proveedor.correo_pro"/>
 </div><div class="form-group">
-    <label for="status_prov">status_prov</label>
-    <input required id="status_prov" type="text" class="form-control" name="status_prov" size="30" value="$proveedor.status_prov"/>
-</div>
+    <label>Estado</label>
+    <div class="radio">
+        <label><input type="radio" name="status_prov" value=1 checked> Activo</label>
+        <label><input type="radio" name="status_prov" value=0 >Inactivo</label>
+    </div>
 
     <div class="form-group">
         <label></label>
-        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
+        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-pencil"></span> Editar proveedor</button>
     </div>
 </form>
 <br>
