--- a/application/views/categorias/edit.html
+++ b/application/views/categorias/edit.html
@@ -38,7 +38,7 @@ $if message != None:
     </div>
     
     <div class="form-group">
-        <label for="descripcion_cat">Desccripción</label>
+        <label for="descripcion_cat">Descripción</label>
         <input required id="descripcion_cat" type="text" class="form-control" name="descripcion_cat" size="30" value="$categorias.descripcion_cat"/>
     </div>
 
