--- a/application/views/categorias/insert.html
+++ b/application/views/categorias/insert.html
@@ -16,13 +16,6 @@
             
         }
         }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
     </style>
 </head>
 
@@ -38,7 +31,7 @@
     </div>
     
     <div class="form-group">
-        <label for="descripcion_cat">Descripcion </label>
+        <label for="descripcion_cat">Descripción </label>
         <input required id="descripcion_cat" type="text" class="form-control" name="descripcion_cat" size="30"/>
     </div>
 
