--- a/application/views/categorias/view.html
+++ b/application/views/categorias/view.html
@@ -10,7 +10,7 @@ $def with(categorias)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
