--- a/application/views/detalle_ingreso/insert.html
+++ b/application/views/detalle_ingreso/insert.html
@@ -8,71 +8,13 @@
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
             background-color: #EDEAEA;    
             
         }
-        }
-
-        #sesion{
-            position: absolute;
-            width: 580px;
-            height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
-            background: #F9F9F9;
-            border: 2px solid #F9F9F9;
-            box-sizing: border-box;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
-
-        #ingresar{
-            position: center;
-            width: 200px;
-            height: 50px;
-            text-align: center;
-
-            background: #43A6EE;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 10px;
-            color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
-            left: center;
-            top: center;
-
-            font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
-            justify-content: center;
         }
     </style>
 </head>
@@ -84,18 +26,24 @@
 <form action="" method="post" enctype="multipart/form-data">
 
     <div class="form-group">
-    <label for="idingreso_fk">idingreso_fk</label>
-    <input required id="idingreso_fk" type="text" class="form-control" name="idingreso_fk" size="30"/>
-</div><div class="form-group">
-    <label for="idproducto_fk">idproducto_fk</label>
-    <input required id="idproducto_fk" type="text" class="form-control" name="idproducto_fk" size="30"/>
-</div><div class="form-group">
-    <label for="cantidad_pro">cantidad_pro</label>
-    <input required id="cantidad_pro" type="text" class="form-control" name="cantidad_pro" size="30"/>
-</div><div class="form-group">
-    <label for="precio_in">precio_in</label>
-    <input required id="precio_in" type="text" class="form-control" name="precio_in" size="30"/>
-</div>
+        <label for="idingreso_fk">Ingreso</label>
+        <input required id="idingreso_fk" type="text" class="form-control" name="idingreso_fk" size="30"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="idproducto_fk">Producto</label>
+        <input required id="idproducto_fk" type="text" class="form-control" name="idproducto_fk" size="30"/>
+    </div>
+
+    <div class="form-group">
+        <label for="cantidad_pro">Cantidad</label>
+        <input required id="cantidad_pro" type="text" class="form-control" name="cantidad_pro" size="30"/>
+    </div>
+
+    <div class="form-group">
+        <label for="precio_in">Precio</label>
+        <input required id="precio_in" type="text" class="form-control" name="precio_in" size="30"/>
+    </div>
 
     <div class="form-group">
         <label></label>
