--- a/application/views/main/admin.html
+++ b/application/views/main/admin.html
@@ -12,7 +12,7 @@ $var privilege: $params['privilege']
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
@@ -40,7 +40,7 @@ $var privilege: $params['privilege']
 
 <body>
 
-<h2 id="h2" style="color:#46CAEA">Administrador $params['nombre_admin']</h2>
+<h2 id="h2" style="color:#456583">Administrador $params['nombre_admin']</h2>
 <div id="bienvenido">
     <center><p>BIENVENIDO AL SISTEMA DE VENTAS</p></center>
     <br>
