--- a/application/views/main/index.html
+++ b/application/views/main/index.html
@@ -53,20 +53,12 @@ $var privilege: $params['privilege']
             width: 100%;
         }
         }
-        #h2 {
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-            font face: "Didact Gothic";
-        }
         .contenedor {
             display: flex;
             width: 350px;
             height: 40px;
             color: #456583;
-            font-size: 40px;
+            font-size: 17px;
             line-height: 40px;
 
             position: absolute;
@@ -79,36 +71,14 @@ $var privilege: $params['privilege']
 
             font face: "Didact Gothic";
         }
-        ul {
-            list-style: none;
-            padding-left: 10px;
-            animation: cambiar 7s infinite;
-        }
-        ul, p{
-            margin: 0;
-        }
-        @keyframes cambiar{
-            0%{margin-top: 0;}
-            50%{margin-top: 0;}
-
-            65%{margin-top: -40px;}
-
-            100%{margin-top: 0;}
-        }
     </style>
 </head>
 
 <body class="banner">
         <br>
         <br>
-        <h1 style="color:#456583">Sistemas de ventas 2021</h1>  
+        <h1 style="color:#F9F9F9">¡Bienvenido al Sistema de ventas 2021 ... Inicia sesión!</h1>  
         <br>
         <br>
-    <div class="contenedor">
-        <p style="color: #456583">¡Bienvenido!</p>
-        <ul>
-            <li>Inicia sesiòn</li>
-        </ul>
-    </div>
 </body>
 </html>
