--- a/application/views/categorias/delete.html
+++ b/application/views/categorias/delete.html
@@ -10,7 +10,7 @@ $def with(categorias, message)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
@@ -18,19 +18,12 @@ $def with(categorias, message)
             
         }
         }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
     </style>
 </head>
 
 <body>
 <h3>
-    <a href="/categorias">categorias</a>
+    <a href="/categorias">Categorias</a>
 </h3>
 $if message != None:
     <div class="alert alert-warning">
@@ -42,15 +35,19 @@ $if message != None:
     <input type="hidden" name="idcategorias" id="idcategorias" value="$categorias.idcategorias" />
 
     <div class="form-group">
-    <label for="nombre_cat">nombre_cat</label>
-    <input readonly id="nombre_cat" type="text" class="form-control" name="nombre_cat" size="30" value="$categorias.nombre_cat"/>
-</div><div class="form-group">
-    <label for="descripcion_cat">descripcion_cat</label>
-    <input readonly id="descripcion_cat" type="text" class="form-control" name="descripcion_cat" size="30" value="$categorias.descripcion_cat"/>
-</div><div class="form-group">
-    <label for="status_cat">status_cat</label>
-    <input readonly id="status_cat" type="text" class="form-control" name="status_cat" size="30" value="$categorias.status_cat"/>
-</div>
+        <label for="nombre_cat">Nombre de la Categoria</label>
+        <input readonly id="nombre_cat" type="text" class="form-control" name="nombre_cat" size="30" value="$categorias.nombre_cat"/>
+    </div>
+
+    <div class="form-group">
+        <label for="descripcion_cat">Descripción</label>
+        <input readonly id="descripcion_cat" type="text" class="form-control" name="descripcion_cat" size="30" value="$categorias.descripcion_cat"/>
+    </div> 
+
+    <div class="form-group">
+        <label for="status_cat">Estado</label>
+        <input readonly id="status_cat" type="text" class="form-control" name="status_cat" size="30" value="$categorias.status_cat"/>
+    </div>
 
     <div class="form-group">
         <label></label>
