--- a/application/views/categorias/index.html
+++ b/application/views/categorias/index.html
@@ -35,7 +35,7 @@ $def with(categorias)
 <table id="datos_tabla" class="table table-hover" cellspacing="0" width="100%">
     <thead>
         <th>Categorias</th>
-        <th>Descripcion</th>
+        <th>Descripción</th>
         <th>Editar</th>
         <th>Eliminar</th>
     </thead>
