--- a/application/views/formapago/delete.html
+++ b/application/views/formapago/delete.html
@@ -10,7 +10,7 @@ $def with(formapago, message)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
@@ -18,70 +18,12 @@ $def with(formapago, message)
             
         }
         }
-
-        #sesion{
-            position: absolute;
-            width: 580px;
-            height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
-            background: #F9F9F9;
-            border: 2px solid #F9F9F9;
-            box-sizing: border-box;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
-
-        #ingresar{
-            position: center;
-            width: 200px;
-            height: 50px;
-            text-align: center;
-
-            background: #43A6EE;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 10px;
-            color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
-            left: center;
-            top: center;
-
-            font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
-            justify-content: center;
-        }
     </style>
 </head>
 
 <body>
 <h3>
-    <a href="/formapago">formapago</a>
+    <a href="/formapago">Forma de pago</a>
 </h3>
 $if message != None:
     <div class="alert alert-warning">
@@ -93,31 +35,43 @@ $if message != None:
     <input type="hidden" name="idformapago" id="idformapago" value="$formapago.idformapago" />
 
     <div class="form-group">
-    <label for="efectivo">efectivo</label>
-    <input readonly id="efectivo" type="text" class="form-control" name="efectivo" size="30" value="$formapago.efectivo"/>
-</div><div class="form-group">
-    <label for="banco">banco</label>
-    <input readonly id="banco" type="text" class="form-control" name="banco" size="30" value="$formapago.banco"/>
-</div><div class="form-group">
-    <label for="nom_titular">nom_titular</label>
-    <input readonly id="nom_titular" type="text" class="form-control" name="nom_titular" size="30" value="$formapago.nom_titular"/>
-</div><div class="form-group">
-    <label for="num_cuenta">num_cuenta</label>
-    <input readonly id="num_cuenta" type="text" class="form-control" name="num_cuenta" size="30" value="$formapago.num_cuenta"/>
-</div><div class="form-group">
-    <label for="num_tarjeta">num_tarjeta</label>
-    <input readonly id="num_tarjeta" type="text" class="form-control" name="num_tarjeta" size="30" value="$formapago.num_tarjeta"/>
-</div><div class="form-group">
-    <label for="fecha_ven">fecha_ven</label>
-    <input readonly id="fecha_ven" type="text" class="form-control" name="fecha_ven" size="30" value="$formapago.fecha_ven"/>
-</div><div class="form-group">
-    <label for="nip">nip</label>
-    <input readonly id="nip" type="text" class="form-control" name="nip" size="30" value="$formapago.nip"/>
-</div>
+        <label for="efectivo">Efectivo</label>
+        <input readonly id="efectivo" type="text" class="form-control" name="efectivo" size="30" value="$formapago.efectivo"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="banco">Banco</label>
+        <input readonly id="banco" type="text" class="form-control" name="banco" size="30" value="$formapago.banco"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="nom_titular">Nombre del titular</label>
+        <input readonly id="nom_titular" type="text" class="form-control" name="nom_titular" size="30" value="$formapago.nom_titular"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="num_cuenta">Numero de cuenta</label>
+        <input readonly id="num_cuenta" type="text" class="form-control" name="num_cuenta" size="30" value="$formapago.num_cuenta"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="num_tarjeta">Numero de tarjeta</label>
+        <input readonly id="num_tarjeta" type="text" class="form-control" name="num_tarjeta" size="30" value="$formapago.num_tarjeta"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="fecha_ven">Fecha de vencimiento</label>
+        <input readonly id="fecha_ven" type="text" class="form-control" name="fecha_ven" size="30" value="$formapago.fecha_ven"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="nip">Nip</label>
+        <input readonly id="nip" type="text" class="form-control" name="nip" size="30" value="$formapago.nip"/>
+    </div>
 
     <div class="form-group">
         <label></label>
-        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-trash"></span> Delete</button>
+        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
     </div>
 </form>
 <br>
