--- a/application/views/formapago/view.html
+++ b/application/views/formapago/view.html
@@ -10,7 +10,7 @@ $def with(formapago)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
@@ -18,79 +18,71 @@ $def with(formapago)
             
         }
         }
-
-        #sesion{
+        #view_pago{
             position: absolute;
-            width: 580px;
-            height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
-            background: #F9F9F9;
-            border: 2px solid #F9F9F9;
-            box-sizing: border-box;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
-
-        #ingresar{
-            position: center;
-            width: 200px;
-            height: 50px;
-            text-align: center;
-
-            background: #43A6EE;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 10px;
-            color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
+            width: 420px;
+            height: 440px;
             left: center;
-            top: center;
+            top: 100px;
 
+            background: #FFFFFF;
+            border: 2px solid #B1BDC9;
+            box-sizing: border-box;
+            border-radius: 15px;
+        }
+        #campos{
             font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
+            font-style: center;
+            font-weight: center;
+            font-size: 17px;
+            line-height: 22px;
             display: flex;
             align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
-            justify-content: center;
+            left: center;
+            top: 120px;
+
+            color: #456583;
         }
     </style>
 </head>
 
 <body>
 <h3>
-    <a href="/formapago">formapago</a>
+    <a href="/formapago">Forma de pago</a>
 </h3>
-efectivo: $formapago.efectivo <br>
-banco: $formapago.banco <br>
-nom_titular: $formapago.nom_titular <br>
-num_cuenta: $formapago.num_cuenta <br>
-num_tarjeta: $formapago.num_tarjeta <br>
-fecha_ven: $formapago.fecha_ven <br>
-nip: $formapago.nip <br>
-
+<div id="view_pago">
+        <p id="campos">
+        Efectivo: $formapago.efectivo <br>
+        </p>
+        <br>
+        <p id="campos">
+        Banco: $formapago.banco <br>
+        </p>
+        <br>
+        <p id="campos">
+        Nombre del titular: $formapago.nom_titular <br>
+        </p>
+        <br>
+        <p id="campos">
+        Numero de cuenta: $formapago.num_cuenta <br>
+        </p>
+        <br>
+        <p id="campos">
+        Numero de tarjeta: $formapago.num_tarjeta <br>
+        </p>
+        <br>
+        <p id="campos">
+        Fecha de vencimiento: $formapago.fecha_ven <br>
+        </p>
+        <br>
+        <p id="campos">
+        Nip: $formapago.nip <br>
+        </p>
+        <br>
+        <div class="form-group">
+        <label></label>
+            <button id="send" name="send" class="form-control"></span> Guardar</button>
+        </div>
 <br>
 <br>
 </body>
