--- a/application/views/ingreso/view.html
+++ b/application/views/ingreso/view.html
@@ -10,71 +10,37 @@ $def with(ingreso)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
-        }
-
-        #sesion{
+        }  
+        #view_ingreso{
             position: absolute;
-            width: 580px;
-            height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
-            background: #F9F9F9;
-            border: 2px solid #F9F9F9;
-            box-sizing: border-box;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
-
-        #ingresar{
-            position: center;
-            width: 200px;
-            height: 50px;
-            text-align: center;
-
-            background: #43A6EE;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 10px;
-            color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
+            width: 420px;
+            height: 440px;
             left: center;
-            top: center;
+            top: 100px;
 
+            background: #FFFFFF;
+            border: 2px solid #B1BDC9;
+            box-sizing: border-box;
+            border-radius: 15px;
+        }
+        #campos{
             font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
+            font-style: center;
+            font-weight: center;
+            font-size: 17px;
+            line-height: 22px;
             display: flex;
             align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
-            justify-content: center;
+            left: center;
+            top: 120px;
+
+            color: #456583;
         }
     </style>
 </head>
@@ -83,13 +49,35 @@ $def with(ingreso)
 <h3>
     <a href="/ingreso">Ingresos</a>
 </h3>
-idproveedor: $ingreso.idproveedor <br>
-fecha_ingreso: $ingreso.fecha_ingreso <br>
-tipo_comprobante: $ingreso.tipo_comprobante <br>
-serie_comprobante: $ingreso.serie_comprobante <br>
-numero_comprobante: $ingreso.numero_comprobante <br>
-total: $ingreso.total <br>
-
+<div id="view_ingreso">
+        <p id="campos">
+        Proveedor: $ingreso.idproveedor<br>
+        </p>
+        <br>
+        <p id="campos">
+        Fecha de ingreso: $ingreso.fecha_ingreso <br>
+        </p>
+        <br>
+        <p id="campos">
+        Tipo de comprobante: $ingreso.tipo_comprobante <br>
+        </p>
+        <br>
+        <p id="campos">
+        Serie de comprobante: $ingreso.serie_comprobante <br>
+        </p>
+        <br>
+        <p id="campos">
+        Numero de comprobante: $ingreso.numero_comprobante <br>
+        </p>
+        <br>
+        <p id="campos">
+        Total: $ingreso.total <br>
+        </p>
+        <br>
+        <div class="form-group">
+        <label></label>
+            <button id="send" name="send" class="form-control"></span> Guardar</button>
+        </div>
 <br>
 <br>
 </body>
