--- a/application/views/ingreso/master.html
+++ b/application/views/ingreso/master.html
@@ -3,7 +3,7 @@ $def with (page)
 <html>
 
 <head>
-    <title>Ingresos</title>
+    <title>Compras</title>
     <link rel="icon" type="image/png" href="/static/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, max-age=0, no-store, must-revalidate" />
@@ -24,7 +24,7 @@ $def with (page)
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class='active'><a href="/ingreso"><span class="glyphicon glyphicon-list"></span> ingreso</a></li>
+                    <li class='active'><a href="/ingreso"><span class="glyphicon glyphicon-list"></span> Compras</a></li>
                     <li><a href="/ingreso/insert"><span class="glyphicon glyphicon-plus"></span>Insert</a></li>
                 </ul>
             </div>
