--- a/application/views/ingreso/index.html
+++ b/application/views/ingreso/index.html
@@ -9,7 +9,7 @@ $def with(ingreso)
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-            font face: "Didact Gothic";
+            font-face: "Didact Gothic";
             font size: 17px;
         }
         @media only screen and (max-width: 740px) {
