--- a/application/views/admin/view.html
+++ b/application/views/admin/view.html
@@ -10,17 +10,16 @@ $def with(admin)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 25;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
         }
         #view_admin{
-            position: absolute;
-            width: 420px;
+            position: center;
+            width: 440px;
             height: 440px;
             left: center;
             top: 100px;
