--- a/application/views/producto/view.html
+++ b/application/views/producto/view.html
@@ -4,7 +4,7 @@ $def with(producto)
 <head>
     <style>
         body {
-            background-color: #EDEAEA;
+            background-image: url("/static/imagenes/14092.jpg");
             background-position:center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -14,21 +14,23 @@ $def with(producto)
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;               
+            background-image: url("/static/imagenes/14092.jpg");            
         }
         }
           
         #view_producto{
             position: absolute;
-            width: 420px;
-            height: 440px;
-            left: 48px;
-            top: 100px;
-
+            width: 460px;
+            height: 360px;
+            left: 30%;
+            top: 60px;
             background: #FFFFFF;
             border: 2px solid #B1BDC9;
             box-sizing: border-box;
             border-radius: 15px;
+            padding-left: 30px;
+            padding-top: 10px;
+            padding-right: 30px;
         }
         #campos{
             font-family: Didact Gothic;
