--- a/application/views/detalle_venta/view.html
+++ b/application/views/detalle_venta/view.html
@@ -4,7 +4,7 @@ $def with(detalle_venta)
 <head>
     <style>
         body {
-            background-color: #EDEAEA;
+            background-image: url("/static/imagenes/14092.jpg");
             background-position:center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -14,21 +14,23 @@ $def with(detalle_venta)
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
+            background-image: url("/static/imagenes/14092.jpg");   
             
         }
         }
         #view_venta{
             position: absolute;
-            width: 420px;
-            height: 440px;
-            left: center;
-            top: 100px;
-
+            width: 460px;
+            height: 360px;
+            left: 30%;
+            top: 60px;
             background: #FFFFFF;
             border: 2px solid #B1BDC9;
             box-sizing: border-box;
             border-radius: 15px;
+            padding-left: 30px;
+            padding-top: 10px;
+            padding-right: 30px;
         }
         #campos{
             font-family: Didact Gothic;
@@ -41,7 +43,7 @@ $def with(detalle_venta)
             left: center;
             top: 120px;
 
-            color: #456583;
+            color: #141516;
         }
     </style>
 </head>
@@ -52,19 +54,19 @@ $def with(detalle_venta)
 </h3>
 <div id="view_venta">
         <p id="campos">
-        Venta: $detalle_venta.idventa <br>
+        <strong>Venta: </strong> &nbsp; $detalle_venta.idventa <br>
         </p>
         <br>
         <p id="campos">
-        Producto: $detalle_venta.idproducto <br>
+        <strong>Producto: </strong> &nbsp; $detalle_venta.idproducto <br>
         </p>
         <br>
         <p id="campos">
-        Cantidad: $detalle_venta.cantidad <br>
+        <strong>Cantidad: </strong> &nbsp; $detalle_venta.cantidad <br>
         </p>
         <br>
         <p id="campos">
-        Subtotal: $detalle_venta.subtotal <br>
+        <strong>Subtotal: </strong> &nbsp; $detalle_venta.subtotal <br>
         </p>
         <br>
         <div class="form-group">
