--- a/application/views/proveedor/view.html
+++ b/application/views/proveedor/view.html
@@ -4,7 +4,7 @@ $def with(proveedor)
 <head>
     <style>
         body {
-            background-color: #EDEAEA;
+            background-image: url("/static/imagenes/14092.jpg");
             background-position:center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -14,21 +14,23 @@ $def with(proveedor)
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
+            background-image: url("/static/imagenes/14092.jpg");
             
         }
         }
         #proveedor{
             position: absolute;
-            width: 400px;
-            height: 350px;
-            left: center;
-            top: 100px;
-
+            width: 460px;
+            height: 420px;
+            left: 30%;
+            top: 60px;
             background: #FFFFFF;
             border: 2px solid #B1BDC9;
             box-sizing: border-box;
             border-radius: 15px;
+            padding-left: 30px;
+            padding-top: 10px;
+            padding-right: 30px;
         }
         #campos{
             font-family: Didact Gothic;
@@ -41,32 +43,37 @@ $def with(proveedor)
             left: center;
             top: 120px;
 
-            color: #456583;
+            color: #141516;
         }
     </style>
 </head>
 
 <body>
-<h3>
-    <a href="/proveedor">Proveedor</a>
-</h3>
-    <div id="proveedor">
+<div id="proveedor">
+    <h4>
+       <center><a href="/proveedor">Informacion del proveedor</a> </center> 
+    </h4>
+    <br>
         <p id="campos">
-        <img src="/static/imagenes/usuario.png" height="20px" width="20px" align="left">Nombre: $proveedor.nombre_pro <br></img>
+        <img src="/static/imagenes/usuario.png" height="20px" width="20px" align="left">
+        <strong>Nombre: </strong> &nbsp; $proveedor.nombre_pro <br></img>
         </p>
         <br>
         <p id="campos">
-        <img src="/static/imagenes/telephone.png" height="20px" width="20px" align="left">Telefono: $proveedor.telefono_pro <br></img>
+        <img src="/static/imagenes/telephone.png" height="20px" width="20px" align="left">
+        <strong>Telefono: </strong> &nbsp; $proveedor.telefono_pro <br></img>
         </p>
         <br>
         <p id="campos">
-        <img src="/static/imagenes/email.png" height="20px" width="20px" align="left">Contacto: $proveedor.correo_pro <br></img>
+        <img src="/static/imagenes/email.png" height="20px" width="20px" align="left">
+        <strong>Contacto: </strong> &nbsp; $proveedor.correo_pro <br></img>
         </p>
         <br>
-        <label id="campos">Estado</label>
+        <strong><label id="campos">Estado</label></strong>
         <div class="radio">
-            <label id="campos"><input type="radio" name="status_prov" value=1 checked>Activo</label>
-            <label id="campos"><input type="radio" name="status_prov" value=0>Inactivo</label>
+            <div class="radio">
+            <label id="campos"><input type="radio" name="status_admin" value=1 checked> Activo</label>
+            <label id="campos"><input type="radio" name="status_admin" value=0> Inactivo</label>
         </div>
         <br>
         <div class="form-group">
