--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -9,7 +9,7 @@ $def with(admin)
             background-attachment: fixed;
             background-size: cover;
             font: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
