--- a/application/views/categorias/edit.html
+++ b/application/views/categorias/edit.html
@@ -10,12 +10,11 @@ $def with(categorias, message)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
         }
     </style>
