--- a/application/views/detalle_ingreso/view.html
+++ b/application/views/detalle_ingreso/view.html
@@ -16,7 +16,7 @@ $def with(detalle_ingreso)
             background-image: url("/static/imagenes/14092.jpg");          
         }
         }
-        #ingreso{
+        #view_ingreso{
             position: absolute;
             width: 460px;
             height: 360px;
@@ -50,7 +50,7 @@ $def with(detalle_ingreso)
 <h3>
     <a href="/detalle_ingreso">detalle_ingreso</a>
 </h3>
-<div id="ingreso">
+<div id="view_ingreso">
         <p id="campos">
         <strong>Ingreso: </strong> &nbsp; $detalle_ingreso.idingreso_fk <br>
         </p>
