--- a/application/views/ingreso/index.html
+++ b/application/views/ingreso/index.html
@@ -22,7 +22,7 @@ $def with(ingreso)
 
 <body>
 <h3>
-    <a href="/ingreso">Compras</a>
+    <a href="/ingreso">Ingresos</a>
 </h3>
 <table id="datos_tabla" class="table table-hover" cellspacing="0" width="100%">
     <thead>
