--- a/application/views/usuario/view.html
+++ b/application/views/usuario/view.html
@@ -18,7 +18,7 @@ $def with(usuario)
             
         }
         }
-        #proveedor{
+        #view_usuario{
             position: absolute;
             width: 460px;
             height: 360px;
@@ -52,7 +52,7 @@ $def with(usuario)
 <h3>
     <a href="/usuario">Usuario</a>
 </h3>
-    <div id="proveedor">
+    <div id="view_usuario">
         <p id="campos">
         <strong>Nombre: </strong> &nbsp; $usuario.nombre <br>
         </p>
