--- a/application/views/categorias/insert.html
+++ b/application/views/categorias/insert.html
@@ -8,12 +8,11 @@
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
         }
     </style>
