--- a/application/views/proveedor/index.html
+++ b/application/views/proveedor/index.html
@@ -10,20 +10,12 @@ $def with(proveedor)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
         }
     </style>
 </head>
