--- a/application/views/venta/edit.html
+++ b/application/views/venta/edit.html
@@ -10,71 +10,12 @@ $def with(venta, message)
             background-attachment: fixed;
             background-size: cover;
             font face: "Didact Gothic";
-            font size: 45;
+            font size: 17px;
         }
         @media only screen and (max-width: 740px) {
         body {
-            background-color: #EDEAEA;    
-            
+            background-color: #EDEAEA;               
         }
-        }
-
-        #sesion{
-            position: absolute;
-            width: 580px;
-            height: 310px;
-            left: 443px;
-            top: 70px;
-            justify-content: center;
-
-            background: #F9F9F9;
-            border: 2px solid #F9F9F9;
-            box-sizing: border-box;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 15px;
-            
-
-
-        }
-        #h2{
-            position: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-        }
-
-        #ingresar{
-            position: center;
-            width: 200px;
-            height: 50px;
-            text-align: center;
-
-            background: #43A6EE;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 10px;
-            color: #43A6EE;
-            justify-content: center;
-        }
-
-        #boton_ingresar {
-            position: float: left;;
-            width: 200px;
-            height: 50px;
-            left: center;
-            top: center;
-
-            font-family: Didact Gothic;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 30px;
-            line-height: 39px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            position: center;
-            color: #F9F9F9;
-            justify-content: center;
         }
     </style>
 </head>
@@ -92,22 +33,28 @@ $if message != None:
     <input type="hidden" name="idventa" id="idventa" value="$venta.idventa" />
 
     <div class="form-group">
-    <label for="idusuario">idusuario</label>
-    <input required id="idusuario" type="text" class="form-control" name="idusuario" size="30" value="$venta.idusuario"/>
-</div><div class="form-group">
-    <label for="total">total</label>
-    <input required id="total" type="text" class="form-control" name="total" size="30" value="$venta.total"/>
-</div><div class="form-group">
-    <label for="idformapago">idformapago</label>
-    <input required id="idformapago" type="text" class="form-control" name="idformapago" size="30" value="$venta.idformapago"/>
-</div><div class="form-group">
-    <label for="fecha_venta">fecha_venta</label>
-    <input required id="fecha_venta" type="text" class="form-control" name="fecha_venta" size="30" value="$venta.fecha_venta"/>
-</div>
+        <label for="idusuario">Usuario</label>
+        <input readonly id="idusuario" type="text" class="form-control" name="idusuario" size="30" value="$venta.idusuario"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="total">Total</label>
+        <input readonly id="total" type="text" class="form-control" name="total" size="30" value="$venta.total"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="idformapago">Forma de pago</label>
+        <input readonly id="idformapago" type="text" class="form-control" name="idformapago" size="30" value="$venta.idformapago"/>
+    </div>
+    
+    <div class="form-group">
+        <label for="fecha_venta">Fecha de venta</label>
+        <input readonly id="fecha_venta" type="text" class="form-control" name="fecha_venta" size="30" value="$venta.fecha_venta"/>
+    </div>
 
     <div class="form-group">
         <label></label>
-        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
+        <button id="send" name="send" class="form-control"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
     </div>
 </form>
 <br>
