--- a/application/views/producto/insert.html
+++ b/application/views/producto/insert.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
     <style>
@@ -82,12 +83,9 @@
     <a href="/producto">Productos </a>
 </h3>
 <form action="" method="post" enctype="multipart/form-data">
-
-    <div class="form-group">
-        <label for="idcategorias">Categoria</label>
-        <input required id="idcategorias" type="text" class="form-control" name="idcategorias" size="30"/>
-    </div>
-
+    <select name="select">
+        <option value="idcategorias"> </option>
+      </select>
     <div class="form-group">
         <label for="img_producto">Imagen</label>
         <input required id="img_producto" type="text" class="form-control" name="img_producto" size="30"/>
